# libft

./: .gitignore  CMakeLists.txt  Makefile  README.md  b.sh  create_norm.sh  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstmap.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_split.c  ft_strchr.c  ft_strlcat.c  ft_strlcpy.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  function_ideas.txt  index.md  libft.h  test.c
extra_functions/: dbl_exponent.c  extract_n_digits_from_double.c  ft_double_exp.c  ft_exponent.c  ft_free.c  ft_get_tenth_exp.c  ft_put_double.c  ft_putdouble_sn.c  ft_putllu_base.c  ft_putnofc.c  ft_round_double.c
includes/: ft_string.h  libft.h  libft.hpp  monoquicksort.h  monovec.h
lib/: CMakeLists.txt
lib/advanced/: ft_strcmp_ignore_case.c  ft_string.c  ft_string_format.c
lib/extra/: ft_isspace.c  ft_putnofc.c  ft_string.c
lib/mandatory/additional/: ft_striteri.c
lib/mandatory/recoded/: ft_bzero.c
make_settings/: settings.mk  src_files.mk
src/extra/: find_first_not_of.c  find_first_of.c
src/mandatory/recoded/: ft_atoi.c
test/: CMakeLists.txt  main.cpp  test_monovec.cpp  test_quicksort.cpp  test_strcmp.cpp  test_string.cpp
